Fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-.centered{
-	display: block;
-    margin-left: auto;
-    margin-right: auto;
+.centered {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.center_block, .bottom_nav{
-	background-color: #3a8bd7
+.center_block,
+.bottom_nav {
+  background-color: #3a8bd7;
 }
 
-.nav-link{
-	color:	white;
+.nav-link {
+  color: white;
+}
+
+.container-fluid {
+  padding: 0 !important;
 }
